force-app/main/default/objects/Crew_List__c/Crew_List__c.object-meta.xml
<CustomObject>
    <label>Crew List</label>
    <nameField>
        <label>Crew Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crew Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>