force-app/main/default/objects/Crew_List__c/fields/Acting_Rank__c.field-meta.xml
<CustomField>
    <fullName>Acting_Rank__c</fullName>
    <label>Acting Rank</label>
    <length>100</length>
    <type>Text</type>
</CustomField>