force-app/main/default/objects/Crew_List__c/fields/Crew_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Crew_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Crew External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>