force-app/main/default/objects/Crew_List__c/fields/Crew_Temp__c.field-meta.xml
<CustomField>
    <fullName>Crew_Temp__c</fullName>
    <label>Crew Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>