force-app/main/default/objects/Crew_List__c/fields/CrewList_Temp__c.field-meta.xml
<CustomField>
    <fullName>CrewList_Temp__c</fullName>
    <label>CrewList Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>