force-app/main/default/objects/Crew_List__c/fields/Duty_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Duty_Assignment__c</fullName>
    <label>Duty Assignment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>