force-app/main/default/objects/Crew_List__c/fields/Duty_Code__c.field-meta.xml
<CustomField>
    <fullName>Duty_Code__c</fullName>
    <label>Duty Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>