force-app/main/default/objects/Crew_List__c/fields/Duty_Code_F__c.field-meta.xml
<CustomField>
    <fullName>Duty_Code_F__c</fullName>
    <formula>CASE( Duty_Code__c, 
'TVL', 'Passive', 
'FLY', 'Active',
Duty_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duty Code</label>
    <type>Text</type>
</CustomField>