force-app/main/default/objects/Crew_List__c/fields/Flight_Temp__c.field-meta.xml
<CustomField>
    <fullName>Flight_Temp__c</fullName>
    <label>Flight Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>