force-app/main/default/objects/Crew_List__c/fields/FlightId__c.field-meta.xml
<CustomField>
    <fullName>FlightId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipName>Crews</relationshipName>
    <type>Lookup</type>
</CustomField>