force-app/main/default/objects/Crew_List__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>The crew’s language, such as “French” or “Chinese (Traditional).”</description>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>