force-app/main/default/objects/Crew_List__c/fields/Last_EVAL__c.field-meta.xml
<CustomField>
    <fullName>Last_EVAL__c</fullName>
    <label>Last EVAL</label>
    <type>Date</type>
</CustomField>