force-app/main/default/objects/Crew_List__c/fields/Last_Modifed_by_Webservice__c.field-meta.xml
<CustomField>
    <fullName>Last_Modifed_by_Webservice__c</fullName>
    <label>Last Modifed by Webservice</label>
    <type>DateTime</type>
</CustomField>