force-app/main/default/objects/Crew_List__c/fields/No_of_Eval__c.field-meta.xml
<CustomField>
    <fullName>No_of_Eval__c</fullName>
    <label>No. of Eval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>