force-app/main/default/objects/Crew_List__c/fields/Personnel_ID__c.field-meta.xml
<CustomField>
    <fullName>Personnel_ID__c</fullName>
    <description>The crew’s employee number.</description>
    <formula>CrewId__r.Personel_Id__c</formula>
    <label>Personnel ID</label>
    <type>Text</type>
</CustomField>