force-app/main/default/objects/Crew_List__c/fields/POS_Fly__c.field-meta.xml
<CustomField>
    <fullName>POS_Fly__c</fullName>
    <label>POS Fly</label>
    <length>100</length>
    <type>Text</type>
</CustomField>