force-app/main/default/objects/Crew_List__c/fields/Position_Status__c.field-meta.xml
<CustomField>
    <fullName>Position_Status__c</fullName>
    <formula>Duty_Code_F__c &amp; 
"-" &amp; 
LPAD(TEXT(SEQ_No__c), 2 ,"0")</formula>
    <label>Position Status</label>
    <type>Text</type>
</CustomField>