force-app/main/default/objects/Crew_List__c/fields/returnfltdate__c.field-meta.xml
<CustomField>
    <fullName>returnfltdate__c</fullName>
    <label>returnfltdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>