force-app/main/default/objects/Crew_List__c/fields/returnfltno__c.field-meta.xml
<CustomField>
    <fullName>returnfltno__c</fullName>
    <label>returnfltno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>