force-app/main/default/objects/Crew_List__c/fields/SEQ_No__c.field-meta.xml
<CustomField>
    <fullName>SEQ_No__c</fullName>
    <label>SEQ No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>